# Sistema_de_Mercado

./: CMakeLists.txt  Estruturas.h  Produtos.csv  README.md  atuaPontos.c  atualClien.c  atualProd.c  atualizar.c  cadNovClien.c  cadNovProd.c  estoqBaixo.c  funcoes.h  funcoesListaSet.h  listar1000.c  listar18a25.c  listarAco.c  listarBebs.c  listarFrios.c  listarHigiene.c  listarPad.c  listarSet.c  listarVendas.c  programaPrincipal.c  registros.h  subMenu.h  subMenuClientes.c  subMenuProdutos.c  subMenuVendas.c  venda.c
Source/: atualClien.c  atualProd.c  cadNovClien.c  cadNovProd.c  estoqBaixo.c  listar1000.c  listar18a25.c  listarSet.c  listarVendas.c  programaPrincipal.c  subMenu.h  subMenuClientes.c  venda.c
